package sync_proto;

//生成的文件放到当前目录中： protoc --go_out=. *.proto

enum SYNC {
    Msg_SendFileInfo    = 1;
    Msg_SyncFileReq     = 2;
    Msg_SyncFileData    = 3;
}

//client -> Server Type : 0001
message SendFileInfo {
    required string file_name = 1;  // 文件名
    required uint64 hash_code = 2;   // 文件的hash值
}

//server -> client Type : 8002
message SyncFileReq {
    required string file_name = 1;  // 文件名
}

//client -> client Type : 0002
message SyncFileData {
    required string file_name       = 1;   // 文件名
    optional uint32 file_mode       = 2;
    required uint32 total_packs     = 3;   // 分包时的总包数
    required uint32 current_packs   = 4;   // 当前包的编号
    required bytes  data            = 5;   // 文件数据
}